<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
 	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="@color/activity_background">

<ScrollView android:id="@+id/ScrlView" 
    android:layout_width="fill_parent"
     android:layout_height="fill_parent" >

<RelativeLayout  
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registro_Activity" >

    <EditText
        android:id="@+id/registro_nomEstablecimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_nombre"
        android:layout_alignRight="@+id/registro_nombre"
        android:layout_below="@+id/registro_nombre"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/texto_nombre_Tienda"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/registro_rcontrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_nombre"
        android:layout_alignRight="@+id/registro_contrasena"
        android:layout_below="@+id/registro_contrasena"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/texto_repita_contrasena"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registro_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_direccion"
        android:layout_alignRight="@+id/registro_direccion"
        android:layout_below="@+id/registro_direccion"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/texto_nueva_contrasena"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registro_finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/registro_rcontrasena"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/principal_green"
        android:text="@string/botton_finalizar"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/registro_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/texto_nombre"
        android:inputType="textPersonName" >
        
         <requestFocus />
    </EditText>>

    

    <EditText
        android:id="@+id/registro_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_nomEstablecimiento"
        android:layout_alignRight="@+id/registro_nomEstablecimiento"
        android:layout_below="@+id/registro_nomEstablecimiento"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/texto_direccion"
        android:inputType="textPostalAddress" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/registro_nombre"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/titulo_datos"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/principal_green"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/registro_finalizar"
        android:src="@drawable/ic_tienda" />

</RelativeLayout>
</ScrollView>
</LinearLayout>