<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_Activity" 
    android:background="@color/activity_background">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/registro_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/titulo_telefono"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registro_nomEstablecimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_nombre"
        android:layout_alignRight="@+id/registro_nombre"
        android:layout_below="@+id/registro_nombre"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/tiutlo_contrasena"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_ingresar"
        android:layout_alignRight="@+id/login_ingresar"
        android:layout_below="@+id/login_ingresar"
        android:layout_marginTop="5dp"
        android:text="@string/titulo_salir" 
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/login_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registro_nomEstablecimiento"
        android:layout_alignRight="@+id/registro_nomEstablecimiento"
        android:layout_below="@+id/registro_nomEstablecimiento"
        android:layout_marginTop="30dp"
        android:background="@color/principal_green"
        android:text="@string/titulo_ingresar"
        android:textColor="#ffffff" />

</RelativeLayout>
