<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background" 
     >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_logo" />

    <ImageButton
        android:id="@+id/home_productos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_products" />

    <ImageButton
        android:id="@+id/home_miTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_tienda" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/titulo_mis_productos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/home_instrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/home_miTienda"
        android:layout_marginLeft="54dp"
        android:layout_toRightOf="@+id/home_miTienda"
        android:src="@drawable/ic_help" />

    <ImageButton
        android:id="@+id/home_pedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_instrucciones"
        android:layout_alignTop="@+id/home_productos"
        android:src="@drawable/ic_basket" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_productos"
        android:layout_below="@+id/home_miTienda"
        android:gravity="center"
        android:text="@string/titulo_mi_tienda"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/login_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/home_instrucciones"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/titulo_cerrar"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_pedidos"
        android:layout_below="@+id/home_pedidos"
        android:gravity="center"
        android:text="@string/titulo_mis_pedidos"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_ingresar"
        android:layout_alignRight="@+id/textView2"
        android:gravity="center"
        android:text="@string/titulo_instructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
