<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Instrucciones_Activity" 
    android:background="@color/activity_background">

    <ImageView
        android:id="@+id/home_productos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />

    <ImageView
        android:id="@+id/home_pedidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="0dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_contactus" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home_pedidos"
        android:layout_marginBottom="26dp"
        android:layout_toLeftOf="@+id/home_pedidos"
        android:gravity="center"
        android:text="@string/titulo_enviar_correo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_productos"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_manual" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/home_productos"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="14dp"
        android:gravity="center"
        android:text="@string/titulo_manual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/login_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/home_pedidos"
        android:layout_marginTop="46dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/boton_atras"
        android:textColor="#ffffff" />

</RelativeLayout>
